# EverOS

./: .gitignore  README.md
methods/EverCore/: Makefile  pyproject.toml  pytest.ini
methods/EverCore/demo/: extract_memory.py
methods/EverCore/docs/dev_docs/: code_quality_roadmap.md  exception_handling_analysis.md  slo_definitions.md
methods/EverCore/docs/grafana/: README.md  evercore_slo_overview.json
methods/EverCore/src/: app.py  base_app.py  bootstrap.py  manage.py  run.py
methods/EverCore/src/agentic_layer/: agentic_utils.py  filter_parser.py  memory_manager.py  profile_search_service.py  rerank_deepinfra.py  rerank_service.py  rerank_vllm.py  retrieval_utils.py  search_mem_service.py  vectorize_base.py  vectorize_deepinfra.py  vectorize_interface.py  vectorize_service.py  vectorize_vllm.py
methods/EverCore/src/agentic_layer/metrics/: __init__.py  memorize_metrics.py  rerank_metrics.py  retrieve_metrics.py  vectorize_metrics.py
methods/EverCore/src/api_specs/: memory_models.py  memory_types.py  request_converter.py
methods/EverCore/src/api_specs/dtos/: memory.py
methods/EverCore/src/biz_layer/: mem_db_operations.py  mem_memorize.py  mem_sync.py  memorize_config.py
methods/EverCore/src/common_utils/: cli_ui.py  datetime_utils.py  language_utils.py  load_env.py  text_utils.py  url_extractor.py
methods/EverCore/src/core/addons/: addons_registry.py
methods/EverCore/src/core/addons/addonize/: addon_bean_order_strategy.py
methods/EverCore/src/core/addons/addonize/tests/: test_addon_bean_order_strategy.py
methods/EverCore/src/core/asynctasks/: task_manager.py
methods/EverCore/src/core/authorize/: decorators.py
methods/EverCore/src/core/cache/redis_cache_queue/: redis_data_processor.py  redis_length_cache_manager.py  redis_windows_cache_manager.py
methods/EverCore/src/core/component/: config_provider.py  elasticsearch_client_factory.py  kafka_consumer_factory.py  kafka_producer_factory.py  milvus_client_factory.py  mongodb_client_factory.py  openai_compatible_client.py  redis_provider.py
methods/EverCore/src/core/context/: context_manager.py
methods/EverCore/src/core/di/: container.py  decorators.py  exceptions.py  scanner.py  utils.py
methods/EverCore/src/core/di/tests/: test_bean_order_strategy.py  test_di_container.py  test_di_scanner.py
methods/EverCore/src/core/errors/: __init__.py  business.py
methods/EverCore/src/core/events/: event_publisher.py
methods/EverCore/src/core/interface/controller/: base_controller.py
methods/EverCore/src/core/lifespan/: business_lifespan.py  database_lifespan.py  elasticsearch_lifespan.py  lifespan_factory.py  longjob_lifespan.py  metrics_lifespan.py  milvus_lifespan.py  mongodb_lifespan.py
methods/EverCore/src/core/lock/: redis_distributed_lock.py
methods/EverCore/src/core/longjob/: longjob_runner.py  recycle_consumer_base.py
methods/EverCore/src/core/middleware/: app_logic_middleware.py  database_session_middleware.py  hmac_signature_middleware.py  profile_middleware.py  prometheus_middleware.py  sse_exception_middleware.py  user_context_middleware.py
methods/EverCore/src/core/nlp/: stopwords_utils.py
methods/EverCore/src/core/observation/: error_classification.py  logger.py
methods/EverCore/src/core/observation/metrics/: __init__.py  counter.py  gauge.py  histogram.py  registry.py  server.py
methods/EverCore/src/core/observation/tracing/: decorators.py  otel.py
methods/EverCore/src/core/oxm/es/: analyzer.py  base_repository.py  doc_base.py
methods/EverCore/src/core/oxm/es/migration/: utils.py
methods/EverCore/src/core/oxm/milvus/: base_repository.py  milvus_collection_base.py
methods/EverCore/src/core/oxm/mongo/: __init__.py  base_repository.py  document_base.py
methods/EverCore/src/core/oxm/pg/: audit_base.py  base_repository.py
methods/EverCore/src/core/queue/msg_group_queue/: msg_group_queue_manager.py
methods/EverCore/src/core/queue/redis_group_queue/: kafka_consumer_record_item.py  redis_group_queue_lua_scripts.py
methods/EverCore/src/core/request/: __init__.py  app_logic_provider.py  request_history_config.py  request_history_decorator.py  timeout_background.py
methods/EverCore/src/core/tenants/: init_tenant_all.py  tenant_config.py  tenant_router.py
methods/EverCore/src/core/tenants/tenantize/: tenant_cache_utils.py
methods/EverCore/src/devops_scripts/data_fix/: es_rebuild_index.py  es_sync_docs.py  es_sync_episodic_memory_docs.py  milvus_rebuild_collection.py  milvus_sync_docs.py  milvus_sync_episodic_memory_docs.py  mongo_add_timestamp_shard.py
methods/EverCore/src/devops_scripts/i18n/: i18n_tool.py
methods/EverCore/src/devops_scripts/milvus_admin/: browse_collections.py
methods/EverCore/src/devops_scripts/sensitive_info/: sensitive_info_tool.py
methods/EverCore/src/memory_layer/: memory_manager.py
methods/EverCore/src/memory_layer/cluster_manager/: manager.py
methods/EverCore/src/memory_layer/llm/: __init__.py  config.py  openai_provider.py
methods/EverCore/src/memory_layer/memcell_extractor/: agent_memcell_extractor.py  base_memcell_extractor.py  conv_memcell_extractor.py
methods/EverCore/src/memory_layer/memory_extractor/: agent_case_extractor.py  agent_skill_extractor.py  atomic_fact_extractor.py  episode_memory_extractor.py  foresight_extractor.py  profile_extractor.py
methods/EverCore/src/memory_layer/profile_indexer/: __init__.py  profile_indexer.py
methods/EverCore/src/memory_layer/profile_manager/: manager.py
methods/EverCore/src/memory_layer/prompts/: __init__.py
methods/EverCore/src/memory_layer/prompts/en/: atomic_fact_prompts.py
methods/EverCore/src/memory_layer/prompts/zh/: conv_prompts.py  group_profile_merge_prompts.py
methods/EverCore/src/service/: group_service.py  memcell_delete_service.py  raw_message_service.py  sender_service.py  session_service.py  settings_service.py
methods/EverCore/tests/: conftest.py  test_agentic_memory_manager.py  test_biz_mem_memorize.py  test_core_errors.py
methods/EverCore/tests/benchmarks/: README.md  conftest.py  test_memorize_benchmark.py  test_retrieve_hybrid_benchmark.py
(+34 files in other folders)
